--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Docker: Criando Containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+        <li>Kubernetes: Introdução e orquestração de Containers</li>
     </ul>
 </body>
 </html>
